--- a/view/layout/layout-vuze.phtml
+++ b/view/layout/layout-vuze.phtml
@@ -96,8 +96,19 @@ use Application\Controller\CoreController;
                             </div>
                         </a>
                         <a class="nav-link nav-link-user dropdown-toggle d-none d-sm-inline-block" href="#" data-toggle="dropdown">
-                            <img src="https://via.placeholder.com/156x156" class="avatar img-fluid rounded mr-1" alt="<?=CoreController::$oSession->oUser->getLabel()?>" /> <span class="text-dark"><?=CoreController::$oSession->oUser->getLabel()?></span>
+                            <img src="https://via.placeholder.com/156x156" class="avatar img-fluid rounded mr-1" alt="<?=CoreController::$oSession->oUser->getLabel()?>" />
+                            <span class="text-dark"><?=CoreController::$oSession->oUser->getLabel()?>
+                                <?php
+                                $aUserXPInfo = CoreController::$oSession->oUser->getExperience();
+                                ?>
+                                - <small><?=$this->translate('Level')?> <?=$aUserXPInfo['level']?></small>
+                            </span>
                         </a>
+                        <div class="nav-text" style="width:100px; margin:-10px 0 0 56px;">
+                            <div class="progress py-1" style="margin-top:2px;">
+                                <div class="progress-bar" role="progressbar" style="width: <?=$aUserXPInfo['percent']?>%" aria-valuenow="<?=$aUserXPInfo['percent']?>" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
                         <div class="dropdown-menu dropdown-menu-right">
                             <a class="dropdown-item" href="<?=$this->url('logout')?>">
                                 <?=$this->translate('Sign out')?>
