--- a/view/partial/nav-vuze.phtml
+++ b/view/partial/nav-vuze.phtml
@@ -19,8 +19,15 @@ $aIndexPermissions = CoreController::$oSession->oUser->getMyPermissions('index',
             if(count($aInfo) == 0) {
                 $aInfo = ['index'=>(object)['nav_label'=>'Home','nav_href'=>'/']];
             }
+            if($aInfo['index']->show_in_menu != 1) {
+                continue;
+            }
+            # check if we are on active node
+            $sActive = ('/'.strtolower($this->sRouteName) == strtolower($aInfo['index']->nav_href)) ? ' active' : '';
+            # home is special case ..
+            $sActive = ($this->sRouteName == 'home' && $aInfo['index']->nav_href == '/') ? ' active' : $sActive;
             ?>
-        <li class="sidebar-item"><a class="sidebar-link" href="<?=$aInfo['index']->nav_href?>"><?=$aInfo['index']->nav_label?></a></li>
+            <li class="sidebar-item"><a class="sidebar-link" href="<?=$aInfo['index']->nav_href?>"><?=$aInfo['index']->nav_label?></a></li>
         <?php } ?>
     </ul>
 </li>
