--- a/view/layout/layout-vuze.phtml
+++ b/view/layout/layout-vuze.phtml
@@ -18,6 +18,7 @@ use Application\Controller\CoreController;
         ->prependStylesheet($this->basePath('/themes/vuze/assets/css/style.css'))
         ->prependStylesheet($this->basePath('/themes/vuze/assets/css/app.css'))
         ->prependStylesheet($this->basePath('/vendor/uppy/dist/uppy.min.css'))
+        ->prependStylesheet($this->basePath('/vendor/sweetalert2/dist/sweetalert2.min.css'))
         ->prependStylesheet($this->basePath('/vendor/summernote/dist/summernote-bs4.min.css'))
         ->prependStylesheet($this->basePath('/vendor/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css'))
         ->prependStylesheet($this->basePath('/vendor/filepond/dist/filepond.min.css'))
@@ -27,7 +28,7 @@ use Application\Controller\CoreController;
     <?= $this->inlineScript()
         ->prependFile($this->basePath('/js/plc-message.js'))
         ->prependFile($this->basePath('/js/listener.js'))
-        ->prependFile($this->basePath('/vendor/sweetalert/dist/sweetalert.min.js'))
+        ->prependFile($this->basePath('/vendor/sweetalert2/dist/sweetalert2.min.js'))
         ->prependFile($this->basePath('/vendor/summernote/dist/summernote-bs4.min.js'))
         ->prependFile($this->basePath('/vendor/jquery-ui-sortable/jquery-ui.min.js'))
         ->prependFile($this->basePath('/themes/vuze/assets/js/app.js'))
