--- a/view/layout/calendar-vuze.phtml
+++ b/view/layout/calendar-vuze.phtml
@@ -6,7 +6,7 @@ use Application\Controller\CoreController;
 
 <head>
     <meta charset="utf-8">
-    <?= $this->headTitle(CoreController::$aGlobalSettings['app-title'])->setSeparator(' - ')->setAutoEscape(false) ?>
+    <?= $this->headTitle('Calendar - '.CoreController::$aGlobalSettings['app-title'])->setSeparator(' - ')->setAutoEscape(false) ?>
 
     <?= $this->headMeta()
         ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -18,6 +18,10 @@ use Application\Controller\CoreController;
         ->prependStylesheet($this->basePath('/css/custom.css'))
         ->prependStylesheet($this->basePath('/themes/vuze/assets/css/style.css'))
         ->prependStylesheet($this->basePath('/themes/vuze/assets/css/app.css'))
+        ->prependStylesheet($this->basePath('/vendor/@fullcalendar/timegrid/main.min.css'))
+        ->prependStylesheet($this->basePath('/vendor/@fullcalendar/list/main.min.css'))
+        ->prependStylesheet($this->basePath('/vendor/@fullcalendar/daygrid/main.min.css'))
+        ->prependStylesheet($this->basePath('/vendor/@fullcalendar/core/main.min.css'))
         ->prependStylesheet($this->basePath('/vendor/shepherd.js/dist/css/shepherd.css'))
         ->prependStylesheet($this->basePath('/vendor/uppy/dist/uppy.min.css'))
         ->prependStylesheet($this->basePath('/vendor/summernote/dist/summernote-bs4.min.css'))
@@ -27,9 +31,13 @@ use Application\Controller\CoreController;
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <!-- Scripts -->
     <?= $this->inlineScript()
-        ->prependFile($this->basePath('/js/custom.js'))
         ->prependFile($this->basePath('/js/plc-message.js'))
         ->prependFile($this->basePath('/js/listener.js'))
+        ->prependFile($this->basePath('/vendor/@fullcalendar/interaction/main.min.js'))
+        ->prependFile($this->basePath('/vendor/@fullcalendar/timegrid/main.min.js'))
+        ->prependFile($this->basePath('/vendor/@fullcalendar/list/main.min.js'))
+        ->prependFile($this->basePath('/vendor/@fullcalendar/daygrid/main.min.js'))
+        ->prependFile($this->basePath('/vendor/@fullcalendar/core/main.min.js'))
         ->prependFile($this->basePath('/vendor/shepherd.js/dist/js/shepherd.min.js'))
         ->prependFile($this->basePath('/vendor/summernote/dist/summernote-bs4.min.js'))
         ->prependFile($this->basePath('/vendor/jquery-ui-sortable/jquery-ui.min.js'))
