--- a/view/layout/layout-vuze.phtml
+++ b/view/layout/layout-vuze.phtml
@@ -54,7 +54,7 @@ $sAppTitle = str_replace(['##VERSION##'],[Application\Module::VERSION],$sAppTitl
 <div class="wrapper">
     <nav class="sidebar sidebar-sticky">
         <div class="sidebar-content  js-simplebar">
-            <a class="sidebar-brand" href="/">
+            <a class="sidebar-brand" href="/home">
                 <img src="/img/logo.png" style="max-height:60px; max-width:120px;" />
             </a>
 
@@ -85,12 +85,12 @@ $sAppTitle = str_replace(['##VERSION##'],[Application\Module::VERSION],$sAppTitl
                     <span aria-hidden="true">&times;</span>
                 </button> -->
                 <div class="sidebar-cta-content">
-                    <strong class="d-inline-block mb-1">Get Premium Support</strong>
+                    <strong class="d-inline-block mb-1">Fragen zu WEOS?</strong>
                     <div class="mb-2">
-                        If you like onePlace, consider a subscription based model
-                        for premium support and extended features
+                        Während der Pilotphase erreichen Sie uns per E-Mail oder Whatsapp,
+                        wir beantworten Ihre Anfrage innert 24h
                     </div>
-                    <a href="https://1plc.ch" class="btn btn-outline-primary" target="_blank">Upgrade</a>
+                    <a href="https://1plc.ch" class="btn btn-outline-primary" target="_blank">Kontakt aufnehmen</a>
                 </div>
             </div>
             <?php } ?>
