--- a/view/layout/layout-vuze.phtml
+++ b/view/layout/layout-vuze.phtml
@@ -83,7 +83,7 @@ $sAppTitle = str_replace(['##VERSION##'],[Application\Module::VERSION],$sAppTitl
                 <!--
                 <button type="button" class="close sidebar-cta-close" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
-                </button> -->
+                </button>
                 <div class="sidebar-cta-content">
                     <strong class="d-inline-block mb-1">Fragen zu WEOS?</strong>
                     <div class="mb-2">
@@ -91,7 +91,7 @@ $sAppTitle = str_replace(['##VERSION##'],[Application\Module::VERSION],$sAppTitl
                         wir beantworten Ihre Anfrage innert 24h
                     </div>
                     <a href="https://1plc.ch" class="btn btn-outline-primary" target="_blank">Kontakt aufnehmen</a>
-                </div>
+                </div>  -->
             </div>
             <?php } ?>
         </div>
